Upgrade to Java 21, fix deprecated APIs and empty catch blocks
- pom.xml: maven.compiler.source/target 11 → 21
- Dockerfile: eclipse-temurin:11 → eclipse-temurin:21
- Fix 6 deprecated boxing: new Integer() → Integer.valueOf(), new Long() → Long.valueOf()
- Fix 40+ empty catch blocks across 29 files with descriptive comments
- Add Thread.currentThread().interrupt() for InterruptedException catches
- All 14 tests passing on Java 21